--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,51 @@
-plugins {
-	id 'java'
-	id 'org.springframework.boot' version '2.7.14'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
-}
-
-group = 'com.fc'
-version = '0.0.1-SNAPSHOT'
-
-java {
-	sourceCompatibility = '11'
-}
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
+buildscript {
+	dependencies {
+//		classpath "io.spring.gradle:dependency-management-plugin:1.0.15.RELEASE"
+		classpath "io.spring.gradle:dependency-management-plugin:0.5.1.RELEASE"
 	}
 }
 
-repositories {
-	mavenCentral()
+plugins {
+//	id 'org.springframework.boot' version '2.7.14'
+	id 'org.springframework.boot' version '2.5.2'
+	id 'java'
 }
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+subprojects {
+	compileJava {
+		sourceCompatibility = 11
+		targetCompatibility = 11
+	}
+	apply plugin: 'java'
+	apply plugin: 'java-library'
+	apply plugin: 'org.springframework.boot'
+	apply plugin: 'io.spring.dependency-management'
+
+	repositories {
+		mavenCentral()
+	}
+
+	dependencies {
+		compileOnly 'org.projectlombok:lombok'
+		annotationProcessor 'org.projectlombok:lombok'
+		annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+		testImplementation 'com.tngtech.archunit:archunit:1.0.1'
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	}
+	test {
+		useJUnitPlatform()
+		maxHeapSize = "1024m" //원하는 만큼 변경
+	}
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+bootRun {
+	enabled = false
+}
+
+bootJar {
+	enabled = false
+}
+
+bootBuildImage{
+	enabled = false
 }
