--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,16 @@ subprojects {
 		compileOnly 'org.projectlombok:lombok'
 		annotationProcessor 'org.projectlombok:lombok'
 		annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
+		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+
+		runtimeOnly 'com.h2database:h2'
+
+		// mapstruct
+		implementation 'org.mapstruct:mapstruct:1.5.2.Final'
+		annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
+
 		testImplementation 'com.tngtech.archunit:archunit:1.0.1'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	}
