--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,8 @@ subprojects {
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 
-		runtimeOnly 'com.h2database:h2'
+		// mysql
+		implementation 'mysql:mysql-connector-java'
 
 		// mapstruct
 		implementation 'org.mapstruct:mapstruct:1.5.2.Final'
