--- a/membership-service/src/main/resources/application.yaml
+++ b/membership-service/src/main/resources/application.yaml
@@ -1,13 +1,28 @@
 spring:
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
-
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:test
-    username: user
-    password:
+#    driver-class-name: org.h2.Driver
+#    url: jdbc:h2:mem:test
+#    username: user
+#    password:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/pay
+    username: root
+    password: root1234!!
 
-  jpa.hibernate.ddl-auto: create-drop
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
+  api-docs:
+    path: /api-docs
+
+
+
