--- a/membership-service/src/main/resources/application.yaml
+++ b/membership-service/src/main/resources/application.yaml
@@ -10,11 +10,32 @@ spring:
     password: root1234!!
 
   jpa:
+    open-in-view: false
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        highlight_sql: true
+        default_batch_fetch_size: 100
     hibernate:
       ddl-auto: create-drop
     database: mysql
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
 
+
+# spring debug level 비활성화 (너무 많음)
+debug: false
+#Actuator 에 endpoint 중 감춰져 있는 부분을 모두 활성화 시킴
+management.endpoints.web.exposure.include: "*"
+
+#package 단위 log 활성화
+logging:
+  level:
+    com.fc.membership: debug
+    #request, response log
+    org.springframework.web.servlet: debug
+    #jpa query log debug 중 binding query parameter ? 으로 나타나는 것을 관찰할 수 있게함
+    org.hibernate.type.descriptor.sql.BasicBinder: trace
 
 springdoc:
   swagger-ui:
