--- a/membership-service/build.gradle
+++ b/membership-service/build.gradle
@@ -6,6 +6,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
+
+    implementation project(path: ':common')
+
     implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 
 }
