--- a/membership-service/src/main/resources/application.yaml
+++ b/membership-service/src/main/resources/application.yaml
@@ -5,9 +5,9 @@ spring:
 #    username: user
 #    password:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/pay
-    username: root
-    password: root1234!!
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
 
   jpa:
     open-in-view: false
