--- a/membership-service/build.gradle
+++ b/membership-service/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+    id 'com.palantir.docker' version '0.25.0'
+}
+
 group 'com.fc.membership'
 version '0.0.1-SNAPSHOT'
 
@@ -15,4 +19,12 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+docker {
+    println(tasks.bootJar.outputs.files)
+    name rootProject.name+'-'+project.name + ":" + version  // image 이름
+    dockerfile file('../Dockerfile') // dockerfile 지정
+    files tasks.bootJar.outputs.files   // 복사할 파일들 지정
+    buildArgs(['JAR_FILE': tasks.bootJar.outputs.files.singleFile.name])    // 전달할 인자
 }
