table name 지정 및 yaml 옵션 docker-compose.yaml 환경변수화

--- a/membership-service/src/main/resources/application.yaml
+++ b/membership-service/src/main/resources/application.yaml
@@ -18,9 +18,9 @@ spring:
         highlight_sql: true
         default_batch_fetch_size: 100
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: ${SPRING_JPA_HIBERNATE_DDL_AUTO}
     database: mysql
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    database-platform: ${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT}
 
 
 # spring debug level 비활성화 (너무 많음)
