--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ subprojects {
 		annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+		implementation 'org.springframework.kafka:spring-kafka'
 
 
 		// mysql
@@ -42,6 +43,8 @@ subprojects {
 
 		testImplementation 'com.tngtech.archunit:archunit:1.0.1'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+		testImplementation 'org.springframework.kafka:spring-kafka-test'
 	}
 	test {
 		useJUnitPlatform()
