--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -36,6 +36,8 @@ services:
       - SPRING_DATASOURCE_PASSWORD=root1234!!
       - SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.MySQL5InnoDBDialect
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      - KAFKA_CLUSTERS_BOOTSTRAPSERVERS=kafka:29092
+      - LOGGING_TOPIC=fc.logging.out.stdout
 
   banking-service:
     image: my-pay-banking-service:0.0.1-SNAPSHOT
@@ -51,6 +53,8 @@ services:
       - SPRING_DATASOURCE_PASSWORD=root1234!!
       - SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.MySQL5InnoDBDialect
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      - KAFKA_CLUSTERS_BOOTSTRAPSERVERS=kafka:29092
+      - LOGGING_TOPIC=fc.logging.out.stdout
 
   money-service:
     image: my-pay-money-service:0.0.1-SNAPSHOT
@@ -66,6 +70,8 @@ services:
       - SPRING_DATASOURCE_PASSWORD=root1234!!
       - SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.MySQL5InnoDBDialect
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
+      - KAFKA_CLUSTERS_BOOTSTRAPSERVERS=kafka:29092
+      - LOGGING_TOPIC=fc.logging.out.stdout
 
   zookeeper:
     image: 'bitnami/zookeeper:latest'
