--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,9 @@ subprojects {
 		annotationProcessor 'org.projectlombok:lombok'
 		annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 
-		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		implementation 'org.springframework.kafka:spring-kafka'
 
+		implementation 'org.springframework.boot:spring-boot-starter-aop'
 
 		// mysql
 		implementation 'mysql:mysql-connector-java'
